[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/components/TwoNotesComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/guitar_g.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/guitar_c.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/guitar_chord.ogg" type="AudioStream" id=6]

[node name="TwoNotesComponent" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Light2" parent="." index="1" instance=ExtResource( 3 )]
key = "d"

[node name="Light1" parent="." index="2" instance=ExtResource( 3 )]
key = "s"

[node name="C" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 5 )

[node name="G" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 4 )

[node name="Chord" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource( 6 )

[node name="SecondNoteTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="LightTurnOnTimer" type="Timer" parent="." index="8"]
one_shot = true

[connection signal="timeout" from="SecondNoteTimer" to="." method="_on_SecondNoteTimer_timeout"]
[connection signal="timeout" from="LightTurnOnTimer" to="." method="_on_LightTurnOnTimer_timeout"]
